--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://adis-tek.github.io/gourmet-games",
+  "homepage": "https://adis-tek.github.io/gourmet-games/",
   "name": "gourmet-games",
   "version": "0.1.0",
   "private": true,
